<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<RelativeLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/caption"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Monthly Stock Status"
            android:id="@+id/heading"
            android:gravity="center"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:text="@string/branch"
                android:id="@+id/branch"
                android:gravity="left"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tMonth"
                android:text="@string/month"
                android:gravity="right"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp" />
        </LinearLayout>

    </LinearLayout>

    <TableLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="230dp"
        android:layout_below="@+id/caption"
        android:layout_marginTop="10dp"
        android:id="@+id/CHDetails"
        android:background="@drawable/borders">

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pDetail"
                android:text="@string/purchase"
                android:textStyle="italic"
                android:layout_gravity="center" />
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cardID"
                android:text="Card ID"
                android:layout_marginTop="12dp" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:id="@+id/ecardID"
                android:textSize="18sp"
                android:layout_marginTop="12dp" />
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cardName"
                android:text="@string/name"
                android:layout_marginTop="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ecardName"
                android:textSize="18sp"
                android:layout_marginTop="12dp" />
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chSugar"
                android:text="@string/sugar"
                android:layout_marginTop="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ecardSugar"
                android:textSize="18sp"
                android:layout_marginTop="12dp" />

        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chWheat"
                android:text="@string/Wheat"
                android:layout_marginTop="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ecardWheat"
                android:textSize="18sp"
                android:layout_marginTop="12dp" />
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chRice"
                android:text="@string/Rice"
                android:layout_marginTop="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ecardRice"
                android:textSize="18sp"
                android:layout_marginTop="12dp" />


        </TableRow>
<TableRow><TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/findDist"
    android:textSize="18sp"
    android:visibility="invisible" /></TableRow>
    </TableLayout>

    <TableLayout

        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_below="@id/CHDetails"
        android:background="@drawable/borders"
        android:id="@+id/StockDetails">

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sDetail"
                android:text="@string/sDetail"
                android:textStyle="italic"
                android:layout_gravity="center" />
        </TableRow>


        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bSugar"
                android:text="@string/sugar"
                android:layout_marginTop="13dp"
                android:layout_marginRight="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ebSugar"
                android:textSize="18sp"
                android:layout_marginTop="13dp"
                android:layout_marginRight="30dp" />

        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bWheat"
                android:text="@string/Wheat"
                android:layout_marginTop="13dp"
                android:layout_marginRight="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ebWheat"
                android:textSize="18sp"
                android:layout_marginTop="13dp"
                android:layout_marginRight="30dp" />
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bRice"
                android:text="@string/Rice"
                android:layout_marginTop="13dp"
                android:layout_marginRight="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ebRice"
                android:textSize="18sp"
                android:layout_marginTop="13dp"
                android:layout_marginRight="30dp" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_below="@+id/CHDetails"
        android:id="@+id/txt"
        android:orientation="vertical">

    </LinearLayout>


</RelativeLayout>
    </ScrollView>