<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/caption"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cTitle"
            android:id="@+id/heading"
            android:gravity="center"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp" />

    </LinearLayout>

    <TableLayout

        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="350dp"
        android:layout_below="@id/caption"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/CHDetails"
        android:background="@drawable/borders"
        android:id="@+id/StockDetails">

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sDetail"
                android:text="Stock Entry"
                android:textStyle="italic"
                android:layout_gravity="center" />
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tMonth"
                android:text="@string/month"
                android:layout_marginTop="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ceMonth"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:text="March"/>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cardID"
                android:text="D. ID"
                android:layout_marginLeft="7dp" />

            <EditText
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/cecardID"
                android:layout_marginLeft="7dp"
                android:textSize="18sp" />
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bSugar"
                android:text="@string/sugar"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ceSugar"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:inputType="number"/>

        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bWheat"
                android:text="@string/Wheat"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ceWheat"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:inputType="number"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bRice"
                android:text="@string/Rice"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ceRice"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:inputType="number"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store"
                android:layout_marginTop="10dp"
                android:id="@+id/store"
                style="android:attr/buttonBarButtonStyle"
                android:onClick="update"
                android:layout_column="4" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_below="@+id/CHDetails"
        android:id="@+id/txt"
        android:orientation="vertical">

    </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rf"
            android:onClick="readFeedback"
            android:id="@+id/rf"
            android:layout_gravity="center"
            android:layout_below="@+id/StockDetails"
            android:layout_centerHorizontal="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ts"
            android:visibility="invisible" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tw"
            android:visibility="invisible" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tr"
            android:visibility="invisible" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/di"
            android:visibility="invisible" />

</RelativeLayout>